Bug 493783 - Fix some Places warnings. r=sdwilsh