toolkit/components/places/nsNavHistoryQuery.cpp
@@ -51,6 +51,9 @@
 #include "nsNetUtil.h"
 #include "nsTArray.h"
 #include "prprf.h"
+#include "mozilla/Util.h"
+
+using namespace mozilla;
 
 class QueryKeyValuePair
 {
@@ -450,7 +453,7 @@ nsNavHistory::QueriesToQueryString(nsINavHistoryQuery **aQueries,
                                query, &nsINavHistoryQuery::GetDomainIsHost);
       nsCAutoString domain;
       nsresult rv = query->GetDomain(domain);
-      NS_ASSERTION(NS_SUCCEEDED(rv), "Failure getting value");
+      NS_ENSURE_SUCCESS(rv, rv);
       nsCString escapedDomain;
       PRBool success = NS_Escape(domain, escapedDomain, url_XAlphas);
       NS_ENSURE_TRUE(success, NS_ERROR_OUT_OF_MEMORY);
@@ -1654,7 +1657,7 @@ AppendBoolKeyValueIfTrue(nsACString& aString, const nsCString& aName,
                          BoolQueryGetter getter)
 {
   PRBool value;
-  nsresult rv = (aQuery->*getter)(&value);
+  DebugOnly<nsresult> rv = (aQuery->*getter)(&value);
   NS_ASSERTION(NS_SUCCEEDED(rv), "Failure getting boolean value");
   if (value) {
     AppendAmpersandIfNonempty(aString);
@@ -1673,7 +1676,7 @@ AppendUint32KeyValueIfNonzero(nsACString& aString,
                               Uint32QueryGetter getter)
 {
   PRUint32 value;
-  nsresult rv = (aQuery->*getter)(&value);
+  DebugOnly<nsresult> rv = (aQuery->*getter)(&value);
   NS_ASSERTION(NS_SUCCEEDED(rv), "Failure getting value");
   if (value) {
     AppendAmpersandIfNonempty(aString);
@@ -1696,7 +1699,7 @@ AppendInt64KeyValueIfNonzero(nsACString& aString,
                              Int64QueryGetter getter)
 {
   PRInt64 value;
-  nsresult rv = (aQuery->*getter)(&value);
+  DebugOnly<nsresult> rv = (aQuery->*getter)(&value);
   NS_ASSERTION(NS_SUCCEEDED(rv), "Failure getting value");
   if (value) {
     AppendAmpersandIfNonempty(aString);
